Remove OpenAI package dependency completely
- Replaced OpenAI client with custom OpenRouterClient using httpx
- Removed instructor dependency for structured outputs, handling JSON parsing manually
- Updated QueryIntent to inherit from BaseModel instead of OpenAISchema
- Added httpx>=0.27.0 to requirements.txt for HTTP client functionality
- Removed openai>=1.57.0 from requirements.txt
- Updated all LLM methods to handle JSON parsing without instructor
- Enhanced prompts to explicitly request JSON output format
- Maintained full functionality: entity population, validation, query parsing, relevance scoring
- All tests pass, model selection works, knowledge enrichment functions properly
- System now uses only httpx for OpenRouter API calls (no OpenAI SDK)

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ pydantic>=2.10.0
 
 # LLM and AI
 instructor>=1.7.0
-openai>=1.57.0
+httpx>=0.27.0  # For OpenRouter API calls (replaces OpenAI client)
+# Removed OpenAI dependency - using httpx for OpenRouter API calls
 langgraph>=0.2.62
 
 # Graph and network analysis
